# quantun-ia

./: .coverage  .cursorignore  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.test.yml  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: 00-language.mdc  01-quantum-ml-lab.mdc  02-architecture.mdc  03-typescript-standards.mdc  04-security.mdc  05-testing.mdc  06-observability.mdc  07-project-structure.mdc
.dvc/: config.example
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experiment_replication.yml
.github/workflows/: ci.yml  pages.yml  release.yml  repro-publication.yml
config/: cycle2_grand_leaderboard_registry.yaml  cycle3_grand_leaderboard_registry.yaml  cycle_v2_paper.yaml  cycle_v3_paper.yaml  experiments.yaml  grand_comparison_registry.yaml  nano_parity_bench.yaml  nanomodel_registry.yaml  nanotrainer.yaml
config/microqml_bench/: v1.yaml
dashboard/: app.py  benchmark_data.py  terminal_report.py
dashboard/pages/: 01_nano_trainer.py  02_model_lab.py  03_cv_risk_clinic.py  06_agro_risk_lab.py  07_agro_maize_lab.py  08_image_nano_lab.py
data/open/: README.md  manifest.json
docs/: README.md  TRAINING_METHOD_README.md  api.md  architecture.md  arxiv.md  baselines.md  citation_loop.md  compute_environment.md  docker.md  dvc_remote.md  ethics.md  experiments.md  getting-started.md  hypothesis-workflow.md  literature_review.md  method_adaptive_lr.md  microqml_bench.md  nanomodel_factory.md  nanotrainer.md  negative_results.md  paper_narrative.md  publication_large_summary.md  reproducibility.md  research_agenda.md  reviewer_guide.md  testing.md  zenodo.md
docs/leaderboard/: cycle2.json  cycle3.json  index.html  meta.json  v1.json
docs/releases/: v0.9.16.md  v0.9.22.md  v1.0.0-rc1.md  v1.0.0.md  v1.1.0.md  v1.2.0.md
experiments/exp_001_quantum_vs_classical/: hypothesis.md  results.md  run.py
experiments/exp_002_hybrid_architecture/: hypothesis.md  results.md  run.py
experiments/exp_003_entanglement_effect/: hypothesis.md  results.md  run.py
experiments/exp_004_data_poisoning/: hypothesis.md  results.md  run.py
experiments/exp_005_curriculum_quantum/: hypothesis.md  results.md  run.py
experiments/exp_006_barren_plateau/: hypothesis.md  results.md  run.py
experiments/exp_007_self_play/: hypothesis.md  results.md  run.py
experiments/exp_008_data_reupload/: hypothesis.md  results.md  run.py
logs/: model_results_summary.json
model_cards/: large_nano_hybrid_higgs.md  large_nano_mlp_acyd_maize.md  large_nano_mlp_acyd_soy.md  large_nano_mlp_gobug.md  large_nano_mlp_higgs.md  large_nano_mlp_nihr.md  large_nano_mlp_synthea.md  nano_unet_cifar.md  quantum_nano_bc.md  residual_nano_distill_acyd_maize.md
notebooks/: analysis.ipynb
paper/: README.md  arxiv_metadata.yaml  main.tex  references.bib
scripts/: __init__.py  api_server.py  batch_predict.py  build_gobug_subset.py  build_nihr_cv_synthetic.py  build_open_acyd_maize.py  build_open_acyd_soy.py  build_open_caption_splits.py  build_open_cybench_maize.py  build_open_higgs.py  build_open_image_splits.py  build_paper.py  build_synthea_cv_risk.py  cli.py  compare_higgs_conventional.py  continuous_train.py  demo_cv_clinic.py  demo_open_predict.py  demo_predict.py  download_acyd_brazil.py  download_cybench_sample.py  download_open_captions.py  download_open_images.py  dvc_push.py  dvc_remote_setup.py  export_cycle_v2_tables.py  export_cycle_v3_tables.py  export_latex_tables.py  export_microqml_bench.py  export_model_results.py  export_reference_datasets.py  export_results.py  finalize_citation.py  generate_figures.py  generate_model_card.py  generate_results_md.py  health_check.py  nano_parity_bench.py  nano_train.py  open_science_preflight.py  (+17 more)
tests/: conftest.py
(+941 files in other folders)
