[project]
name = "quantun-ia"
version = "0.1.0"
description = "Quantum-Inspired Micro ML Lab"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pennylane>=0.35.0",
    "pennylane-lightning>=0.35.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "streamlit>=1.31.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.2",
    "mlflow>=2.12.0",
    "optuna>=3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"experiments/**" = ["E402"]
