[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantun-ia"
version = "0.9.11"
description = "Quantum-Inspired Micro ML Lab"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pennylane>=0.35.0",
    "pennylane-lightning>=0.35.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "streamlit>=1.31.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.2",
    "mlflow>=2.12.0",
    "optuna>=3.6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pyjwt[crypto]>=2.8.0",
]

[project.scripts]
qml-run = "scripts.cli:main"
qml-train = "scripts.nano_train:main"
qml-bench-parity = "scripts.nano_parity_bench:main"
qml-api = "scripts.api_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"experiments/**" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
show_error_codes = true
exclude = ["experiments/", "dashboard/", "notebooks/"]

[[tool.mypy.overrides]]
module = ["src.quantum.*", "src.classical.*"]
disable_error_code = ["misc", "no-untyped-def", "no-any-return"]

[[tool.mypy.overrides]]
module = ["src.training.*"]
disallow_untyped_defs = false
disable_error_code = ["no-untyped-def", "no-any-return", "arg-type", "assignment", "return-value", "var-annotated"]
